--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,22 +15,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - uses: actions/checkout@v3
-      name: Git Checkout
+    - name: Git Checkout
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        submodules: true
 
-    - uses: actions/setup-dotnet@v3
-      name: .NET Setup
+    - name: .NET Setup
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 7.0.x
+        dotnet-version: 8.0.x
+
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v0
+      with:
+        versionSpec: '5.x'
+
+    - name: Determine Version
+      uses: gittools/actions/gitversion/execute@v0
 
     - name: Restoring
-      run: dotnet restore --verbosity normal
+      run: dotnet restore -v normal
 
     - name: Building
-      run: dotnet build --configuration Release --no-restore --verbosity normal
+      run: dotnet build -c Release --no-restore -v normal
 
     - name: Testing
-      run: dotnet test --configuration Release --no-restore --no-build --verbosity normal
+      run: dotnet test -c Release --no-restore --no-build -v normal
